Fix contrast on buttons and update timetable link

--- a/main.css
+++ b/main.css
@@ -35,7 +35,7 @@ body{
 }
 
 .sitebtn{
-  color: #dedede;
+  color: Blue;
   background-color: #86c232;
   padding: 10px 20px;
   text-decoration: none;
